--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.1.3",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
+    "zustand": "^4.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
