--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "framer-motion": "^7.6.2",
     "primeicons": "^5.0.0",
     "primereact": "^8.5.0",
     "react": "^18.2.0",
