--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
-    "zustand": "^4.1.3"
+    "zustand": "^4.1.3",
+    "zustand-persist": "^0.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
